[project]
name = "import-graph"
version = "0.1.0"
description = "Generate import graphs using Ruff"
readme = "README.md"
authors = [
    { name = "Tamir Bahar" }
]
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "rich>=14.1.0",
    "ruff>=0.12.11",
    "typer>=0.16.1",
]

[project.scripts]
import-graph = "import_graph.main:app"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
